# Steganography

./: CMakeLists.txt  COPYING.txt  README.md
header/: common.h  decode.h  encode.h  types.h
source/: decode.cpp  encode.cpp  main.cpp
utils/: my.txt
